[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"
path = "src/main.rs"

[dependencies]
cli = { path = "cli"}
service = {path = "service"}

[features]
default = []
runtime-benchmarks = ["cli/runtime-benchmarks","service/runtime-benchmarks"]

with-devnet-runtime = ["cli/with-devnet-runtime","service/with-devnet-runtime"]
