[package]
name = "node-template"
version = "0.0.1"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Daniel Lam"]
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"
path = "src/main.rs"

[dependencies]
cli = { path = "cli"}
service = {path = "service"}

[features]
default = []
runtime-benchmarks = ["cli/runtime-benchmarks","service/runtime-benchmarks"]

with-devnet-runtime = ["cli/with-devnet-runtime","service/with-devnet-runtime"]
