[package]
authors = ["Daniel Lam"]
edition = "2021"
name = "cli"
version = "0.0.1"

[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
log = "0.4.8"

# Substrate deps
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", features = ["wasmtime"] }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", features = ["wasmtime"]  }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", optional = true }
node-inspect = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17"}

service = {path="../service"}

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

[features]
default = []
runtime-benchmarks = ["service/runtime-benchmarks"]
try-runtime = ["try-runtime-cli","service/try-runtime"]

with-devnet-runtime = ["service/with-devnet-runtime"]