[package]
authors     = ["Daniel Lam"]
description = "Substrate Node Template runtime common primitives"
edition     = "2021"
license     = "Unlicense"
name        = "common-primitives"
version = "1.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

[features]
default = ["std"]
std = [
	"codec/std",
    "scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
