[package]
name = "runtime-common"
version = "0.0.1"
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Daniel Lam"]
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

common-primitives = { default-features = false, path = "../../primitives/common" }

[features]
default = ["std"]
std = [
    "frame-system/std",
    "frame-support/std",

    "sp-runtime/std",
    
    "common-primitives/std",
]
